--- a/indexdesign.css
+++ b/indexdesign.css
@@ -589,13 +589,8 @@ footer{
     .content{column-count: 2; font-size:30px;}
     .second-coloumn{height:auto;}
     .image-slider1{height:auto; width:59%; }
-    .image-slider1 > a {font-size:60px;}
-   /* footer{height:auto; width:100%; margin-right:0px;}
-    .footer-title{text-align: left; font-size: 50px;}
-    .company-info{display: flex; flex-direction: column; font-size: 35px;}
-    .last{display:flex; flex-direction: column;font-size: 35px;}
-    .small-news,.small-news1{justify-content: space-between;}
- }*/
+    .image-slider1 > a {font-size:60px;}   
+ }
 
 @media screen and (min-width:550px) and (max-width:940px){/*specifies the ranges beteen the two sizes of pixel*/ 
 	.image-slider1{height:auto;}
