--- a/jobsdesign.css
+++ b/jobsdesign.css
@@ -233,10 +233,9 @@ input[type=text], input[type=email], select {width: 80%;}
 input[type=submit]{width:100%;}
 body{margin:0px 5px 0px 5px; padding:0px;}
 header{text-align:center;} 
-nav ul{display: flex; flex-direction: column; width:100%; height:auto; text-align:left; margin:0px; padding:0px;}
+nav ul{ flex-direction: column; width:100%; height:auto; text-align:center; margin:0px; padding:0px;}
 footer{height:auto; width:100%; margin-right:0px;}
 .footer-title{text-align: left;}
-.company-info{display: flex; flex-direction: column;}
-/* {display:flex; flex-direction: column;} */
-
+.company-info{flex-direction: column;}
+.tittle{margin-bottom:17px;}
 }
