--- a/tutorialsdesign.css
+++ b/tutorialsdesign.css
@@ -48,15 +48,13 @@ nav ul li a:hover{
 
 section{
     width:100%;
-    height: 1710px;
-    background-color: pink;
+    height: 1710px;    
     display:flex;
     flex-direction:column;
 }
 
 
-.firstone{
-    background-color: #e65100;
+.firstone{    
     width:100%;
     height:500px;
     display: flex;
@@ -68,6 +66,7 @@ section{
 legend{
     font-family: 'Anton', sans-serif;
     font-size:30px;
+    color:#010364;
 }
 
 .firstone> .oneone{
@@ -75,27 +74,141 @@ legend{
     width: 33%;
     background-color: white;
     margin-right:10px;
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
 
+}
+
+.apple{
+    width:100%;
+    height:70%;    
+    overflow:hidden;
+}
+.ball{
+    width:inherit;
+    height:100%;
+    background-image: url(a.jpg);
+    background-size:cover;
+    background-position:center;
+    transition:0.5s;
+}
+
+.apple:hover .ball{
+    transform:scale(1.3);
+}
+
+.cat{
+    font-size:25px;
+    font-family: 'Poppins', sans-serif;
+    color:black;
+    padding-left:2px;
+}
+
+.cat>p{
+    font-size: 10px;
+}
+
+.cat>a{
+    color:black;
+    display: block;    
+}
+
+.cat>a:hover{
+    color:purple;
 }
 
 .firstone> .onetwo{
     height:100%;
-    width: 33%;
-    background-color: brown;
+    width: 33%;    
     margin-right:10px;
-
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+
+.apple1{
+    width:100%;
+    height:70%;    
+    overflow:hidden;
+}
+.ball1{
+    width:inherit;
+    height:100%;
+    background-image: url(b.jpg);
+    background-size:cover;
+    background-position:center;
+    transition:0.5s;
+}
+
+.apple1:hover .ball1{
+    transform:scale(1.3);
+}
+
+.cat1{
+    font-size:25px;
+    font-family: 'Poppins', sans-serif;
+    color:black;
+    padding-left:2px;
+}
+
+.cat1>p{
+    font-size: 10px;
+}
+
+.cat1>a{
+    color:black;
+    display: block;    
+}
+
+.cat1>a:hover{
+    color:purple;
+}
+
 
 .firstone> .onethree{
     height:100%;
     width: 33%;
-    background-color: cornflowerblue;
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
+}
 
+.apple2{
+    width:100%;
+    height:70%;    
+    overflow:hidden;
+}
+.ball2{
+    width:inherit;
+    height:100%;
+    background-image: url(c.jpg);
+    background-size:cover;
+    background-position:center;
+    transition:0.5s;
+}
+
+.apple2:hover .ball2{
+    transform:scale(1.3);
+}
+
+.cat2{
+    font-size:25px;
+    font-family: 'Poppins', sans-serif;
+    color:black;
+    padding-left:2px;
+}
+
+.cat2>p{
+    font-size: 10px;
+}
+
+.cat2>a{
+    color:black;
+    display: block;    
+}
+
+.cat2>a:hover{
+    color:purple;
 }
 
 
-.firsttwo{
-    background-color:white;
+.firsttwo{    
     width:100%;
     height:500px;
     display: flex;    
@@ -105,28 +218,142 @@ legend{
 .firsttwo> .twoone{
     height:100%;
     width: 33%;
-    background-color: sandybrown;
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
     margin-right:10px;
-
 }
+
+.apple3{
+    width:100%;
+    height:70%;    
+    overflow:hidden;
+}
+.ball3{
+    width:inherit;
+    height:100%;
+    background-image: url(d.jpg);
+    background-size:cover;
+    background-position:center;
+    transition:0.5s;
+}
+
+.apple3:hover .ball3{
+    transform:scale(1.3);
+}
+
+.cat3{
+    font-size:25px;
+    font-family: 'Poppins', sans-serif;
+    color:black;
+    padding-left:2px;
+}
+
+.cat3>p{
+    font-size: 10px;
+}
+
+.cat3>a{
+    color:black;
+    display: block;    
+}
+
+.cat3>a:hover{
+    color:purple;
+}
+
 
 .firsttwo> .twotwo{
     height:100%;
     width: 33%;
-    background-color: brown;
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
     margin-right:10px;
-
 }
+
+.apple4{
+    width:100%;
+    height:70%;    
+    overflow:hidden;
+}
+.ball4{
+    width:inherit;
+    height:100%;
+    background-image: url(e.png);
+    background-size:cover;
+    background-position:center;
+    transition:0.5s;
+}
+
+.apple4:hover .ball4{
+    transform:scale(1.3);
+}
+
+.cat4{
+    font-size:25px;
+    font-family: 'Poppins', sans-serif;
+    color:black;
+    padding-left:2px;
+}
+
+.cat4>p{
+    font-size: 10px;
+}
+
+.cat4>a{
+    color:black;
+    display: block;    
+}
+
+.cat4>a:hover{
+    color:purple;
+}
+
 
 .firsttwo> .twothree{
     height:100%;
     width: 33%;
-    background-color: cornflowerblue;
-
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.firstthird{
-    background-color: blueviolet;
+
+.apple5{
+    width:100%;
+    height:70%;    
+    overflow:hidden;
+}
+.ball5{
+    width:inherit;
+    height:100%;
+    background-image: url(f.jpg);
+    background-size:cover;
+    background-position:center;
+    transition:0.5s;
+}
+
+.apple5:hover .ball5{
+    transform:scale(1.3);
+}
+
+.cat5{
+    font-size:25px;
+    font-family: 'Poppins', sans-serif;
+    color:black;
+    padding-left:2px;
+}
+
+.cat5>p{
+    font-size: 10px;
+}
+
+.cat5>a{
+    color:black;
+    display: block;    
+}
+
+.cat5>a:hover{
+    color:purple;
+}
+
+
+.firstthird{    
     width:100%;
     height:500px;
     display: flex;    
@@ -136,25 +363,140 @@ legend{
 .firstthird> .threeone{
     height:100%;
     width: 33%;
-    background-color: white;
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
     margin-right:10px;
-
 }
+
+.apple6{
+    width:100%;
+    height:70%;    
+    overflow:hidden;
+}
+.ball6{
+    width:inherit;
+    height:100%;
+    background-image: url(g.jpg);
+    background-size:cover;
+    background-position:center;
+    transition:0.5s;
+}
+
+.apple6:hover .ball6{
+    transform:scale(1.3);
+}
+
+.cat6{
+    font-size:25px;
+    font-family: 'Poppins', sans-serif;
+    color:black;
+    padding-left:2px;
+}
+
+.cat6>p{
+    font-size: 10px;
+}
+
+.cat6>a{
+    color:black;
+    display: block;    
+}
+
+.cat6>a:hover{
+    color:purple;
+}
+
 
 .firstthird> .threetwo{
     height:100%;
     width: 33%;
-    background-color: yellow;
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
     margin-right:10px;
-
 }
+
+.apple7{
+    width:100%;
+    height:70%;    
+    overflow:hidden;
+}
+.ball7{
+    width:inherit;
+    height:100%;
+    background-image: url(h.jpg);
+    background-size:cover;
+    background-position:center;
+    transition:0.5s;
+}
+
+.apple7:hover .ball7{
+    transform:scale(1.3);
+}
+
+.cat7{
+    font-size:25px;
+    font-family: 'Poppins', sans-serif;
+    color:black;
+    padding-left:2px;
+}
+
+.cat7>p{
+    font-size: 10px;
+}
+
+.cat7>a{
+    color:black;
+    display: block;    
+}
+
+.cat7>a:hover{
+    color:purple;
+}
+
 
 .firstthird> .threethree{
     height:100%;
     width: 33%;
-    background-color: black;
-
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+
+.apple8{
+    width:100%;
+    height:70%;    
+    overflow:hidden;
+}
+.ball8{
+    width:inherit;
+    height:100%;
+    background-image: url(i.jpg);
+    background-size:cover;
+    background-position:center;
+    transition:0.5s;
+}
+
+.apple8:hover .ball8{
+    transform:scale(1.3);
+}
+
+.cat8{
+    font-size:25px;
+    font-family: 'Poppins', sans-serif;
+    color:black;
+    padding-left:2px;
+}
+
+.cat8>p{
+    font-size: 10px;
+}
+
+.cat8>a{
+    color:black;
+    display: block;    
+}
+
+.cat8>a:hover{
+    color:purple;
+}
+
 
 footer{
     background-color: #546E7A;    
@@ -242,12 +584,18 @@ footer{
 
     body{margin: 0px 0px 0px 2px; padding:0px;}  
     header{text-align:center;} 
-    nav ul{display: flex; flex-direction: column; width:100%; height:auto; text-align:left; margin:0px; padding:0px;}
+    nav ul{display: flex; flex-direction: column; width:100%; height:auto; text-align:center; margin:0px; padding:0px;}
+    section{width:100%; height:auto;}
+    .firstone, .firsttwo, .firstthird{display:flex; flex-direction: column; width:100%; padding:0%; height:auto;}
+    .firstone>.oneone, .firstone>.onetwo ,.firstone>.onethree{width:100%; height: auto;}
+    .firsttwo>.twoone, .firsttwo>.twotwo ,.firsttwo>.twothree{width:100%; height:auto;}
+    .firstthird>.threeone, .firstthird>.threetwo ,.firstthird>.threethree{width:100%; height:auto;}
     footer{height:auto; width:100%; margin-right:0px;}
    .footer-title{text-align: left;}
    .company-info{display: flex; flex-direction: column;}
    .last{display:flex; flex-direction: column;}
-   field{display:flex; flex-direction: column; width:100%; height:auto; }
+   
+   
 
 
 }
