--- a/glossarydesign.css
+++ b/glossarydesign.css
@@ -22,9 +22,13 @@ header > a{
 }
 
 nav{
-    background-color:#991B1E;
+    background-color:#e65100;
     font-family: 'Anton', sans-serif;
     padding:15px;
+    opacity:0.8;
+    position:sticky;
+    top:0;
+    z-index:1;
     
 }
 
@@ -47,7 +51,8 @@ nav ul li a{
 
 nav ul li a:hover{
 
-    color:black;   
+    color:#010364;     
+    letter-spacing: 5px;    
 } 
 
 .pagetitle{
@@ -341,6 +346,7 @@ footer{
     body{margin: 0px 0px 0px 2px; padding:0px;}  
     header{text-align:center;} 
     nav ul{display: flex; flex-direction: column; width:100%; height:auto; text-align:center; margin:0px; padding:0px;}
+    nav{position: initial;}
     section{display:flex; flex-direction:column; height:auto; width:100%;}
     .twocontainer{flex-direction:column; height:auto; width:100%;}
     .twocontainer>.number1,.twocontainer>.number2, .twocontainer>.number3{Width:100%; height:auto; background-size: cover; background-position: center; display:flex; flex-direction:column; margin-bottom: 5px;}
