--- a/jobsdesign.css
+++ b/jobsdesign.css
@@ -22,6 +22,8 @@ nav{
     font-family: 'Anton', sans-serif;
     padding:15px;
     opacity:0.8;
+    position:sticky;
+    top:0;
 }
 
 nav ul{
@@ -43,7 +45,8 @@ nav ul li a{
 
 nav ul li a:hover{
 
-    color:black;   
+    color:#010364;     
+    letter-spacing: 5px;   
 } 
 
 .tittle{
@@ -233,6 +236,7 @@ input[type=text], input[type=email], select {width: 80%;}
 input[type=submit]{width:100%;}
 body{margin:0px 5px 0px 5px; padding:0px;}
 header{text-align:center;} 
+nav{position: initial;}
 nav ul{ flex-direction: column; width:100%; height:auto; text-align:center; margin:0px; padding:0px;}
 footer{height:auto; width:100%; margin-right:0px;}
 .footer-title{text-align: left;}
