--- a/reviewdesign.css
+++ b/reviewdesign.css
@@ -22,6 +22,9 @@ nav{
     font-family: 'Anton', sans-serif;
     padding:15px;
     opacity:0.8;
+    position:sticky;
+    top:0;
+    z-index: 1;
 }
 
 nav ul{
@@ -43,7 +46,8 @@ nav ul li a{
 
 nav ul li a:hover{
 
-    color:black;   
+    color:#010364;     
+    letter-spacing: 5px;    
 }
 
 section{
@@ -235,6 +239,7 @@ footer{
     body{margin: 0px 0px 0px 2px; padding:0px;}  
     header{text-align:center;} 
      nav ul{display: flex; flex-direction: column; width:100%; height:auto; text-align:center; margin:0px; padding:0px;}
+     nav{position: initial;}
     section{flex-direction: column; height: auto; width: 100%;}
     .right,.left{width:100%; height:auto;}
     .imagecontainer, .imagecontainer1{transform:translate(81px, 10px);}
