--- a/jobsdesign.css
+++ b/jobsdesign.css
@@ -20,8 +20,7 @@ header > a{
 nav{
     background-color:#e65100;
     font-family: 'Anton', sans-serif;
-    padding:15px;
-    opacity:0.8;
+    padding:15px;    
     position:sticky;
     top:0;
 }
@@ -46,7 +45,7 @@ nav ul li a{
 nav ul li a:hover{
 
     color:#010364;     
-    letter-spacing: 5px;   
+    letter-spacing: 2px;   
 } 
 
 .tittle{
@@ -90,6 +89,11 @@ nav ul li a:hover{
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+
+.contents1> .texts > ul >li{
+    line-height:1.8;
+
+} 
 .contents3{
     margin-bottom:10px;
 }
@@ -106,6 +110,11 @@ nav ul li a:hover{
     font-family: 'Raleway', sans-serif;
     background-color: rgba(0, 0, 0, 0.2);
 }
+
+.contents3> .texts > ul >li{
+    line-height:1.8;
+
+} 
 
 
 
